--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
       <a href="subscribe.html">Subscribe</a>
       <a href="whiteboard.html">Whiteboard</a>
       <a href="profile.html">My Profile</a>
+      <a href="login.html">Login</a>
+
     </div>
   </div>
 </nav>
@@ -408,6 +410,7 @@ function addMessage(text, className) {
 
 </body>
 </html>
+
 
 
 
