--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
   }
   .menu a:hover,.menu a.active{ background:var(--vv-purple); color:#fff }
 
+  /* Hamburger */
+  .hamburger {
+    display:none;
+    width:30px; height:22px;
+    cursor:pointer;
+    flex-direction:column;
+    justify-content:space-between;
+    border:0; background:transparent;
+  }
+  .hamburger span {
+    display:block;
+    height:3px; width:100%;
+    background:var(--vv-purple);
+    border-radius:5px;
+    transition:all 0.3s ease;
+  }
+  .hamburger.active span:nth-child(1) { transform:rotate(45deg) translate(5px,5px); }
+  .hamburger.active span:nth-child(2) { opacity:0; }
+  .hamburger.active span:nth-child(3) { transform:rotate(-45deg) translate(6px,-6px); }
+
+  @media (max-width:900px){
+    .menu { display:none; flex-direction:column; gap:8px; }
+    .hamburger { display:flex; }
+    .menu.show {
+      display:flex !important;
+      position:fixed;
+      top:64px; right:12px;
+      background:#fff; padding:12px;
+      flex-direction:column; gap:8px;
+      border-radius:12px; box-shadow:var(--shadow);
+      z-index:4000; max-width:80%;
+    }
+    .menu a.ai-avatar img { width:50px; height:50px; border-radius:50%; }
+  }
+
   /* ===== HERO ===== */
   .hero{
     position:relative; isolation:isolate;
@@ -80,8 +115,16 @@
     box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
   }
   .btn:hover{opacity:.9}
-  
-  
+
+  .tagline {
+    font-family:'Montserrat',sans-serif;
+    font-weight:800;
+    font-size:1.8rem;
+    margin-top:12px;
+    color:var(--vv-green);
+    text-transform:uppercase;
+    letter-spacing:2px;
+  }
 
   /* ===== SECTIONS ===== */
   section{max-width:1100px;margin:64px auto;padding:0 20px}
@@ -107,15 +150,25 @@
       <img src="Valiant Vision.jpg" alt="Valiant Vision logo">
       <div class="name">Valiant Vision</div>
     </div>
-    <div class="menu">
+    
+    <!-- Hamburger button -->
+    <button class="hamburger" id="hamburger" aria-label="Menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
+    <!-- Menu -->
+    <div class="menu" id="menu">
       <a href="#about" class="active">About Us</a>
       <a href="#problem">Problem</a>
       <a href="#solution">Our Solution</a>
       <a href="subscribe.html">Subscribe</a>
       <a href="whiteboard.html">Whiteboard</a>
-      <a href="profile.html">My Profile</a>
-      <a href="login.html">Login</a>
-
+      <!-- AI Avatar Login -->
+      <a href="login.html" class="ai-avatar" title="Login">
+        <img src="https://api.dicebear.com/6.x/adventurer/svg?seed=User" alt="AI Avatar">
+      </a>
     </div>
   </div>
 </nav>
@@ -126,11 +179,9 @@
     <h1>Give Your Curiosity a Home</h1>
     <p>Unlock monthly creativity kits designed by mentors from leading universities. Join our journey of learning by doing.</p>
     <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
+    <div class="tagline">The Way It's Meant To Be Learnt</div>
   </div>
-  <!-- Initial Badge Placeholder -->
-<div id="home-badge" style="display:none;"></div>
-
-
+  <div id="home-badge" style="display:none;"></div>
 </header>
 
 <!-- ABOUT -->
@@ -388,7 +439,7 @@ function addMessage(text, className) {
   messages.scrollTop = messages.scrollHeight;
 }
 </script>
-  <script>
+<script>
   // Show animated badge on homepage if user subscribed
   window.addEventListener("load", function() {
     if (localStorage.getItem("subscribed") === "true") {
@@ -406,35 +457,15 @@ function addMessage(text, className) {
   });
 </script>
 
+<script>
+  const hamburger = document.getElementById('hamburger');
+  const menu = document.getElementById('menu');
 
+  hamburger.addEventListener('click', () => {
+    hamburger.classList.toggle('active');
+    menu.classList.toggle('show');
+  });
+</script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
